<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayActivity">

    <ImageView
        android:id="@+id/artistimg"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_alert" />

    <TextView
        android:id="@+id/genrelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/genrelabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tracklabel" />

    <TextView
        android:id="@+id/artistlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/artistlabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genrelabel" />

    <TextView
        android:id="@+id/albumlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/albumlabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artistlabel" />

    <TextView
        android:id="@+id/tracklabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/tracklabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artistimg" />

    <TextView
        android:id="@+id/trackpricelabel"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/trackpricelabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumlabel" />

    <TextView
        android:id="@+id/albumpricelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/albumpricelabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trackpricelabel" />

    <TextView
        android:id="@+id/trackcontent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tracklabel"
        app:layout_constraintStart_toEndOf="@+id/tracklabel"
        app:layout_constraintTop_toTopOf="@+id/tracklabel" />

    <TextView
        android:id="@+id/genrecontent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/genrelabel"
        app:layout_constraintStart_toEndOf="@+id/genrelabel"
        app:layout_constraintTop_toTopOf="@+id/genrelabel" />

    <TextView
        android:id="@+id/artistcontent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/artistlabel"
        app:layout_constraintStart_toEndOf="@+id/artistlabel"
        app:layout_constraintTop_toTopOf="@+id/artistlabel" />

    <TextView
        android:id="@+id/albumcontent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/albumlabel"
        app:layout_constraintStart_toEndOf="@+id/albumlabel"
        app:layout_constraintTop_toTopOf="@+id/albumlabel" />

    <TextView
        android:id="@+id/trackpricecontent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/trackpricelabel"
        app:layout_constraintStart_toEndOf="@+id/trackpricelabel"
        app:layout_constraintTop_toTopOf="@+id/trackpricelabel" />

    <TextView
        android:id="@+id/albumpricecontent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/albumpricelabel"
        app:layout_constraintStart_toEndOf="@+id/albumpricelabel"
        app:layout_constraintTop_toTopOf="@+id/albumpricelabel" />

    <Button
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/finish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumpricelabel" />
</android.support.constraint.ConstraintLayout>